--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "immer": "^7.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "use-immer": "^0.4.0"
   }
 }
