--- a/package.json
+++ b/package.json
@@ -16,16 +16,15 @@
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
     "css-loader": "^3.6.0",
-    "electron": "^9.0.4",
+    "electron": "^9.0.5",
     "electron-webpack": "^2.8.2",
     "webpack": "^4.43.0"
   },
   "dependencies": {
     "d3": "^5.16.0",
-    "immer": "^7.0.1",
+    "immer": "^7.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "tachyons": "^4.12.0",
-    "use-immer": "^0.4.0"
+    "tachyons": "^4.12.0"
   }
 }
