--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "immer": "^7.0.5",
+    "normalize-url": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "tachyons": "^4.12.0"
