--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "electron-webpack dev",
+    "start": "electron-webpack dev",
     "lint": "eslint src/"
   },
   "keywords": [],
@@ -15,21 +15,21 @@
     "whiteListedModules": []
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-react": "^7.10.4",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^3.6.0",
-    "electron": "^9.0.5",
+    "css-loader": "^4.2.0",
+    "electron": "^9.1.2",
     "electron-webpack": "^2.8.2",
-    "eslint": "^7.3.1",
+    "eslint": "^7.6.0",
     "eslint-config-node-style-guide": "^3.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
-    "webpack": "^4.43.0"
+    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "webpack": "^4.44.1"
   },
   "dependencies": {
-    "immer": "^7.0.5",
+    "immer": "^7.0.7",
     "normalize-url": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
